--- a/content/articles/jumping-into-the-world-of-aws.mdx
+++ b/content/articles/jumping-into-the-world-of-aws.mdx
@@ -12,7 +12,7 @@ series:
 
 One of my goals for the new year is to gain hands-on experience with cloud technologies and the infrastructure side of software engineering. This includes stuff like logging, CI/CD pipelines, and automated deployments.
 
-Currently, at my workplace, we heavily rely on AWS for managing our front-end deployments (and out backend too obviously) and sometimes during meetings, I get kind of lost when any infrastructure topic comes up. We use a lot of Terraform and Bash scripts, and right now, when I look at `.tf` or `.sh` files, it feels like I'm looking at hieroglyphs.
+Currently, at my workplace, we heavily rely on AWS for managing our front-end deployments (and out backend too obviously) and sometimes during meetings, I get kind of lost when any infrastructure topic comes up. We use a lot of Terraform and Bash scripts, and right now, when I look at `.tf` or `.sh` files, it feels like I'm looking at hieroglyphics.
 
 It's time to change that.
 
@@ -26,7 +26,7 @@ Here is a dump of every AWS service I have heard of or interacted with in some w
 
 - AWS S3 - Storage Bucket
 - AWS Lambda - Serverless functions
-- AWS EC2 - Cloud compute [Servers, Computers basically]
+- AWS EC2 - Cloud compute (Servers, basically)
 - Dynamo DB - NoSQL database
 - AWS SNS - Used to send emails and notifications
 - RDS - PostgreSQL in the cloud
