--- a/content/articles/trying-to-create-an-aws-account-the-right-way.mdx
+++ b/content/articles/trying-to-create-an-aws-account-the-right-way.mdx
@@ -1,9 +1,9 @@
 ---
-title: "Trying to Create an AWS account the right way"
+title: "Trying to create an AWS account the right way"
 publishedAt: "2024-01-22"
 description: "Ramblings about my attemepts to create an AWS dev enviornment using AWS organisations and org formation"
 tags: ["AWS", "Cloud", "Cloud Resume Challenge", "OrgFormation"]
-og: "https://ucarecdn.com/ef3a88c3-277a-4bdd-bd7b-26095f5adf73/jumpingintothescaryworldofaws.png"
+og: "https://ucarecdn.com/8812c8f2-7ef6-43f0-b4a7-6dbce6c0a493/creatinganawsaccounttherightway.png"
 status: "published"
 series:
   order: 2
