feat: add type field to article
Signed-off-by: KXLAA <kolade.afode@yahoo.com>

--- a/content/articles/nsfw-javascript-the-comma-operator.mdx
+++ b/content/articles/nsfw-javascript-the-comma-operator.mdx
@@ -3,6 +3,7 @@ title: "NSFW Javascript - The Comma Operator"
 publishedAt: "2023-03-15"
 description: "Exploring the weird comma operator in Javascript."
 tags: ["Javascript", "Patterns"]
+type: "article"
 og: "https://ucarecdn.com/2147abed-1d3f-42ef-9215-89536ef95689/nsfwjavascriptthecommaoperator.png"
 status: "published"
 ---
