--- a/content/articles/building-and-deploying-the-frontend-of-the-cloud-resume.mdx
+++ b/content/articles/building-and-deploying-the-frontend-of-the-cloud-resume.mdx
@@ -3,6 +3,7 @@ title: "Building and deploying the Front end of the Cloud Resume"
 publishedAt: "2024-01-29"
 description: "How I built and deployed a static website using AWS S3, CloudFront, and Route 53"
 tags: ["AWS", "Cloud", "Cloud Resume Challenge", "OrgFormation"]
+type: "article"
 og: "https://ucarecdn.com/ef3a88c3-277a-4bdd-bd7b-26095f5adf73/jumpingintothescaryworldofaws.png"
 status: "draft"
 series:
