--- a/content/articles/why-did-you-code-it-this-way.mdx
+++ b/content/articles/why-did-you-code-it-this-way.mdx
@@ -3,6 +3,7 @@ title: "Why did you code it this way?"
 publishedAt: "2023-12-29"
 description: 'How do you respond when someone asks, "Why did you code it this way?"'
 tags: ["Advice", "Collaboration", "Code Review", "JavaScript"]
+type: "article"
 og: "https://ucarecdn.com/ffca2bd1-507b-41be-a78b-d28df723dba3/whydidyoucodeitthisway.png"
 status: "published"
 ---
