fix: more small fixes
Signed-off-by: KXLAA <kolade.afode@yahoo.com>

--- a/content/articles/drag-and-drop-in-react-with-dnd-kit.mdx
+++ b/content/articles/drag-and-drop-in-react-with-dnd-kit.mdx
@@ -3,7 +3,7 @@ title: "Drag & Drop in React with Dnd Kit"
 publishedAt: "2023-02-21"
 description: "Learn how to use DnD Kit to create stunning drag-and-drop experiences."
 tags: ["React", "Typescript", "Tutorial"]
-type: "article"
+articleType: "article"
 og: "https://ucarecdn.com/367c0ae2-68ac-4c14-9b19-973c66e81773/draganddropinreactwithdndkit.png"
 status: "published"
 ---
