--- a/content/articles/feature-flags-with-react-hooks.mdx
+++ b/content/articles/feature-flags-with-react-hooks.mdx
@@ -3,7 +3,7 @@ title: "Feature flags with React Hooks"
 publishedAt: "2023-04-30"
 description: "Learn how to build feature flags with React Hooks"
 tags: ["React", "Typescript", "Tutorial"]
-type: "article"
+articleType: "article"
 og: "https://ucarecdn.com/e86dcfc9-ec35-4aa2-9e03-40839771e60e/featureflagswithreacthooks.png"
 status: "published"
 ---
