--- a/content/articles/jumping-into-the-world-of-aws.mdx
+++ b/content/articles/jumping-into-the-world-of-aws.mdx
@@ -4,7 +4,7 @@ publishedAt: "2024-01-12"
 description: "It's a new year & its time to face my fears and learn AWS once and for all."
 tags: ["AWS", "Cloud", "Cloud Resume Challenge"]
 og: "https://ucarecdn.com/ef3a88c3-277a-4bdd-bd7b-26095f5adf73/jumpingintothescaryworldofaws.png"
-type: "article"
+articleType: "article"
 status: "published"
 series:
   order: 1
