--- a/content/articles/javascript-promises.mdx
+++ b/content/articles/javascript-promises.mdx
@@ -5,4 +5,5 @@ description: "Notes on JavaScript Promises"
 tags: ["JavaScript", "Promises"]
 og: "https://ucarecdn.com/ef3a88c3-277a-4bdd-bd7b-26095f5adf73/jumpingintothescaryworldofaws.png"
 status: "draft"
+articleType: "note"
 ---
