--- a/content/articles/notes-on-the-software-engineers-guide-book.mdx
+++ b/content/articles/notes-on-the-software-engineers-guide-book.mdx
@@ -4,6 +4,76 @@ publishedAt: "2024-01-29"
 description: "Book notes on The Software Engineer's Guidebook by Gergely Orosz"
 tags: ["Career", "Book Notes"]
 og: "https://ucarecdn.com/ef3a88c3-277a-4bdd-bd7b-26095f5adf73/jumpingintothescaryworldofaws.png"
-status: "draft"
+status: "published"
 articleType: "note"
 ---
+
+These are my notes for the book [The Software Engineer's Guidebook](https://www.engguidebook.com/) by Gergely Orosz.
+
+## Chapter 1 - Career Paths
+
+### Chapter 1 Key points
+
+- There are many types or tiers of companies to work for, each with different expectations and requirements for success.
+
+  Understanding these differences can have an impact on compensation, the type of work you will be exposed to, and the trajectory of your career. Tech companies can be broadly classified into three tiers, with Tier 1 being the lowest and Tier 2 being at the top of the market.
+
+- As with company paths, there are also different types of software engineering career paths.
+
+  These paths vary by company, but typically there is a single career path where an engineer must move into management to progress, and a dual track where an engineer can choose between the managerial path or remain an individual contributor.
+
+- The idea of cost centers and profit centers - Profit centers bring in the money; as such, they are more stable. Cost centers do not generate revenue. Choosing between cost and profit centers requires balance, and working in both gives different perspectives.
+
+- A career is more than just jobs, promotions, and compensation. There are many other important intangibles that can contribute to a great career, including the quality of work, colleagues, team dynamics, company culture, personal motivations, among other things.
+
+### Chapter 1 Action Points
+
+- What tier is the company I am working in? Is it Tier 1, 2, or 3?
+
+- Is the team you are currently working on a cost center or profit center?
+
+## Chapter 2 - Owning Your Career
+
+### Chapter 2 Key points
+
+- Your career is your responsibility, so own it. There are many ways to own your career: talk to your manager about your goals, share your work with colleagues, and create opportunities for feedback.
+
+- Make sure you get stuff done. Ensure that this stuff is impactful, and make sure people know that you get stuff done. Do impactful work and then make noise about it.
+
+- We suffer from recency bias - we only remember recent things. A great way to ensure we remember the work we do is to keep a work log and record key tasks each week.
+
+- Feedback is a gift, so give, ask for, and seek out feedback. Create opportunities to receive feedback through code reviews, design documents, and performance reviews. Make sure to acknowledge good work in specific terms.
+
+- Make your manager an ally by understanding their goals and making their job easier. Keep them informed about your current and ongoing work. Ensure that your one-on-one meetings with your manager are regular.
+
+- Remember, it's a marathon and not a sprint. Pace yourself during the different ups and downs of your career to avoid burnout.
+
+### Chapter 2 Action Points
+
+- Do you currently have a work log? If not, start maintaining a regular work log and save it on Github.
+
+- When was the last time you gave actionable and specific feedback to a colleague? Consider doing this more often.
+
+- What are your career goals? Where do you see yourself as an Engineer in 5 years? Does your manager know about these goals?
+
+- Document 1 on 1 meetings.
+
+## Chapter 3 - Performance Reviews
+
+### Chapter 3 Key points
+
+- Understand what is valued by the business and how you can add that value. This includes understanding how the promotion system works. There are many kinds of performance review processes, so identify which one applies at work and act accordingly.
+
+- Let your manager know that you want to be promoted. Share your goals with them and come to an agreement on goals and expectations.
+
+- Use your work log to record your wins and successes, and share them with your manager. Don't forget to include the work you do to help others.
+
+- Be honest with yourself and create a self-review. Determine if you are meeting expectations, falling short, or exceeding them. It is important to have established these expectations with your manager.
+
+- Remember that performance reviews are a snapshot of time. Play the long game and remember that individual reviews hold little significance in the context of a decade-old career.
+
+### Chapter 3 Action Points
+
+- Do you know what your current level is? Are you meeting the expectations, exceeding them, or falling below the expectations of your level?
+
+- Do you want to get promoted? If so, establish expectations with your manager and set and agree on goals.
