--- a/content/articles/building-and-deploying-the-frontend-of-the-cloud-resume.mdx
+++ b/content/articles/building-and-deploying-the-frontend-of-the-cloud-resume.mdx
@@ -6,7 +6,7 @@ tags:
   ["AWS", "Cloud Resume Challenge", "Terraform", "S3", "CloudFront", "Route 53"]
 articleType: "article"
 og: "https://ucarecdn.com/ef3a88c3-277a-4bdd-bd7b-26095f5adf73/jumpingintothescaryworldofaws.png"
-status: "draft"
+status: "published"
 series:
   order: 3
   title: "Learning AWS with the Cloud Resume Challenge"
